recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:3: error: not found: value levels
	if(levels==1){
           ^DragonCurve1:7: error: not found: value a
		a=x
                ^DragonCurve1:8: error: not found: value b
		b=y
                ^DragonCurve1:9: error: not found: value c
		c=z
                ^DragonCurve1:10: error: not found: value d
		d=t
                ^DragonCurve1:11: error: not found: value u
		u = (a + c)/2 + (d - b)/2
                ^DragonCurve1:12: error: not found: value v
		v = (b + d)/2 - (c - a)/2
                ^DragonCurve1:13: error: not found: value a
		dragon(order-1,a,b,u,v)
                               ^DragonCurve1:14: error: not found: value c
		dragon(order-1,c,d,u,v)
                               ^